patch fix for issue #91